<resources>
    <string name="app_name">Info Covid-19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageDesc">image</string>
    <string name="lakukan_5_hal">LAKUKAN 5 HAL</string>
    <string name="bantu">Bantu hentikan virus corona</string>
    <string name="number1">1</string>
    <string name="tangan">TANGAN Cuci lebih sering</string>
    <string name="number2">2</string>
    <string name="siku">SIKU Untuk menutup mulut saat batuk</string>
    <string name="number3">3</string>
    <string name="wajah">WAJAH Jangan disentuh</string>
    <string name="number4">4</string>
    <string name="jarak">JARAK Jaga jarak aman</string>
    <string name="number5">5</string>
    <string name="rumah">RUMAH Usahakan di rumah aja</string>
    <string name="covid19_world">Covid-19 Di Dunia</string>
    <string name="positif">Positif</string>
    <string name="dummyValue">0</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="nama_provinsi">Nama Provinsi</string>
    <string name="nama_negara">Nama Negara</string>
    <string name="refresh">refresh</string>
    <string name="infoApp">Terdapat informasi tentang Covid-19 dan terdapat perbadingan grafik dan buat tutorialmu!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="info_app">Info Covid-19 App</string>
</resources>
