<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvNameCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_negara"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/positif"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#0066ff"
                    app:cardCornerRadius="6dp">

                    <TextView
                        android:id="@+id/tvJmlPositif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummyValue"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        android:fontFamily="monospace"
                        android:padding="4dp"
                        android:gravity="center_horizontal"
                        android:textColor="#ffffff"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sembuh"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00cc44"
                    app:cardCornerRadius="6dp">

                    <TextView
                        android:id="@+id/tvJmlSembuh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummyValue"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        android:fontFamily="monospace"
                        android:padding="4dp"
                        android:gravity="center_horizontal"
                        android:textColor="#ffffff"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/meninggal"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ff0000"
                    app:cardCornerRadius="6dp">

                    <TextView
                        android:id="@+id/tvJmlDead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummyValue"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        android:fontFamily="monospace"
                        android:padding="4dp"
                        android:gravity="center_horizontal"
                        android:textColor="#ffffff"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>